refactor(project): reorganize file structure for better module separation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -266,7 +266,7 @@
       "lastName": "Last Name",
       "lastNamePlaceholder": "Benavides",
       "email": "Email",
-      "emailPlaceholder": "jorge12@gmail.com",
+      "emailPlaceholder": "user@example.com",
       "dni": "ID Number",
       "dniPlaceholder": "99999999",
       "district": "District",
