--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -266,7 +266,7 @@
       "lastName": "Apellido",
       "lastNamePlaceholder": "Benavides",
       "email": "Correo",
-      "emailPlaceholder": "jorge12@gmail.com",
+      "emailPlaceholder": "usuario@ejemplo.com",
       "dni": "DNI",
       "dniPlaceholder": "99999999",
       "district": "Distrito",
