feat(hotfix-profile): fix settings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -286,7 +286,7 @@
       "lastNamePlaceholder": "Benavides",
       "email": "Email",
       "emailPlaceholder": "user&#64;example.com",
-      "dni": "ID Number",
+      "dni": "DNI",
       "dniPlaceholder": "99999999",
       "district": "District",
       "districtPlaceholder": "Miraflores"
